# lsprotocol-go

./: CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  magefile.go  main.go  pyrightconfig.json  types.go  types_test.go  utils.go
.github/workflows/: main.yml
lspgenerator/: .gitignore  pyproject.toml
lspgenerator/go/: __init__.py  base_types.py  enums.py  go_generator.py  notifications.py  or_types.py  registry.py  requests.py  structs.py  test.stub  tests.py  type_resolver.py  utils.py
lsprotocol/: types.go  types_test.go
protocol/: interfaces_test.go  registry.go  types.go  utils.go  utils_test.go
