[project]
name = "lspgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "generator",
]

[tool.uv.sources]
generator = { git = "https://github.com/microsoft/lsprotocol.git" }

[tool.ruff]
indent-width = 4

[tool.ruff.lint]
ignore = ["D", "S101", "E501", "FLY002", "W191"]

[tool.ruff.format]
indent-style = "tab"
